--- a/packages/signer/package.json
+++ b/packages/signer/package.json
@@ -13,5 +13,13 @@
   "dependencies": {
     "ethers": "^6.13.0"
   },
+  "peerDependencies": {
+    "viem": "^2.0.0"
+  },
+  "peerDependenciesMeta": {
+    "viem": {
+      "optional": true
+    }
+  },
   "license": "MIT"
 }
