--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,7 +39,7 @@ jobs:
         run: npm run build
 
       - name: Run TypeScript tests
-        run: npx vitest run
+        run: npm test
 
       - name: Run Solidity tests
         working-directory: packages/contracts
