--- a/packages/mcp-server/package.json
+++ b/packages/mcp-server/package.json
@@ -1,13 +1,15 @@
 {
   "name": "@wardexai/mcp-server",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "MCP server for Wardex - exposes wallet security tools to Claude Code and other MCP clients",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "bin": {
     "wardex-mcp": "dist/index.js"
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "vitest run --passWithNoTests",
